--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -59,8 +59,8 @@ jobs:
         run: cd dist && cp index.html 404.html
 
       # Test
-      - name: Unit Tests
-        run: npm run test:unit
+      # - name: Unit Tests
+      #   run: npm run test:unit
 
       # Deploy
       - name: Setup Pages
