--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.17",
+    "@supabase/supabase-js": "^2.49.4",
+    "dexie": "^4.0.11",
     "pinia": "^3.0.1",
     "quasar": "^2.18.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.51.1",
