--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -1,6 +1,6 @@
 name: Deploy static content to GitHub Pages
 
-run-name: Deploying "${{ github.repository }}" to GitHub Pages
+run-name: Deploying ${{ github.repository }} to GitHub Pages
 
 on:
   push:
@@ -29,16 +29,6 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
-      # Information
-      - name: Workflow Information
-        run: |
-          echo "Repository: ${{ github.repository }}"
-          echo "Ref: ${{ github.ref }}"
-          echo "Commit SHA: ${{ github.sha }}"
-          echo "Run ID: ${{ github.run_id }}"
-          echo "Actor: ${{ github.actor }}"
-          echo "Event Name: ${{ github.event_name }}"
-
       # Build
       - name: Checkout
         uses: actions/checkout@v4
